--- a/Subsrciber.Console/Subsrciber.Console.csproj
+++ b/Subsrciber.Console/Subsrciber.Console.csproj
@@ -10,14 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="Confluent.Kafka" Version="1.9.0" />
 		<PackageReference Include="Confluent.SchemaRegistry" Version="1.9.0" />
-		<PackageReference Include="Confluent.SchemaRegistry.Serdes.Protobuf" Version="1.9.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.47.0">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="Confluent.SchemaRegistry.Serdes.Avro" Version="1.9.0" />
 	</ItemGroup>
 
-	<ItemGroup>
-		<Protobuf Include="Protobufs\user.proto" OutputDir="%(RelativePath)" GrpcServices="None" CompileOutputs="false"/>
-	</ItemGroup>
 </Project>
